fix link colors in dark mode

--- a/src/collective/sidebar/browser/static/css/sidebar.scss
+++ b/src/collective/sidebar/browser/static/css/sidebar.scss
@@ -23,4 +23,14 @@
     overflow-y: auto;
   }
 
+  a {
+    color: var(--bs-dark);
+  }
+
+}
+
+[data-bs-theme=dark] #portal-sidebar {
+  a {
+    color: var(--bs-light);
+  }
 }
